# Sunray_V2

./: .clang-format  .gitignore  .gitmodules
common/px4_web_api_demo/: CMakeLists.txt  README.md  package.xml
common/px4_web_api_demo/launch/: px4_web_api_demo.launch
common/px4_web_api_demo/scripts/: px4_web_api_demo_node.py
common/px4_web_ui_demo/: CMakeLists.txt  README.md  package.xml
common/px4_web_ui_demo/launch/: px4_web_ui_demo.launch
common/px4_web_ui_demo/scripts/: px4_web_ui_demo_node.py
common/px4_web_ui_demo/web/: index.html
common/sunray_common/: CMakeLists.txt  package.xml
common/sunray_common/include/: string_uav_namespace_utils.hpp
common/sunray_msgs/: CMakeLists.txt  package.xml
common/sunray_msgs/msg/: (废弃)Px4StateCore.msg  (废弃)Px4StateHealth.msg  OdomStatus.msg  Px4State.msg  UAVControlCMD.msg  UAVControlFSMState.msg  UAVControllerState.msg
control/external_fusion/: CMakeLists.txt  package.xml
control/external_fusion/config/: external_fusion_config.yaml
control/external_fusion/include/: external_fusion.hpp
control/sunray_uav_control/: CMakeLists.txt  package.xml  readme.md  state_machine_diagram.md
control/sunray_uav_control/config/: sunray_control_arbiter_config.yaml  sunray_control_config.yaml
control/sunray_uav_control/include/control_data_types/: complex_cmd_masks.h  control_data_types.h  controller_desired_types.hpp  controller_output_types.hpp  curve_data_types.h  mavros_helper_data_types.hpp  trajectory_buffer.h  uav_control_cmd_types.hpp  uav_state_estimate.hpp
control/sunray_uav_control/include/controller/: controller_interface.hpp  px4_origin_controller.hpp  utils.hpp
control/sunray_uav_control/include/mavros_helper/: mavros_helper.hpp
control/sunray_uav_control/include/statemachine/: sunray_fsm.hpp  sunray_fsm_loadparam.hpp  sunray_fsm_param.hpp  sunray_state_types.hpp
control/sunray_uav_control/include/sunray_control_arbiter/: sunray_control_arbiter.h
control/sunray_uav_control/include/sunray_helper/: readme.md  sunray_helper.h
control/sunray_uav_control/include/sunray_statemachine/: sunray_statemachine.h  sunray_statemachine_datatypes.h
control/sunray_uav_control/include/system_check/: sunray_system_check.hpp
control/sunray_uav_control/include/trajectory_buffer/: test.h  trajectory_buffer.h
control/sunray_uav_control/include/utils/: geometry_eigen_conversions.hpp  opflow_ringbuffer.hpp  quintic_curve.hpp
control/sunray_uav_control/include/utils/curve/: cubic_curve.hpp  (+1 more)
control/sunray_uav_control/launch/: load_control_config.launch  quintic_curve_test.launch  sunray_fsm.launch  sunray_helper_demo.launch  test.launch  test_square.launch  test_square_velocity.launch  uav_control_demo.launch
control/sunray_uav_control/msg/: AttitudeCmd.msg  BspLine.msg  ComplexCmd.msg  LandCmd.msg  PositionCmd.msg  ReturnHomeCmd.msg  TakeoffCmd.msg  TrajectoryCmd.msg  VelocityCmd.msg
control/sunray_uav_control/scripts/: export_mocap_pose_csv.sh  flow_eval_ulog_mocap.py  gazebo_model_states_to_odom.py  gen_fsm_diagram.py  load_param.py  record_mocap_tmux.sh  topic_hz_all.py
control/sunray_uav_control/src/control_data_types/: control_data_types.cpp
control/sunray_uav_control/src/controller/: px4_origin_controller.cpp  utils.cpp
control/sunray_uav_control/src/demo/: quintic_curve_test_node.cpp  sunray_fsm_node.cpp  sunray_helper_demo_node.cpp
control/sunray_uav_control/src/mavros_helper/: mavros_helper.cpp
control/sunray_uav_control/src/statemachine/: sunray_fsm.cpp  sunray_fsm_loadparam.cpp
control/sunray_uav_control/src/sunray_control_arbiter/: sunray_control_arbiter.cpp
control/sunray_uav_control/src/sunray_helper/: sunray_helper.cpp
control/sunray_uav_control/src/sunray_statemachine/: sunray_statemachine.cpp  sunray_statemachine_callbacks.cpp
control/sunray_uav_control/src/utils/: geometry_eigen_conversions.cpp  quintic_curve.cpp
control/sunray_uav_control/srv/: Land.srv  PositionRequest.srv  ReturnHome.srv  Takeoff.srv
control/sunray_uav_control/test/: controller_output_types_compile_test.cpp
control/sunray_uav_control/test/px4_origin_controller_takeoff/: origin_controller_square.cpp  origin_controller_square_velocity.cpp  origin_controller_test.cpp
control/sunray_uav_control/test/unit/: test_px4_data_reader.cpp  test_px4_param_types.cpp
control/sunray_uav_control_refactor/: CMakeLists.txt  package.xml  readme.md
control/sunray_uav_control_refactor/config/: sunray_control_config.yaml
control/sunray_uav_control_refactor/include/control_data_types/: controller_debug_types.hpp  mavros_helper_data_types.hpp  uav_control_cmd_types.hpp  uav_state_estimate.hpp
control/sunray_uav_control_refactor/include/controller/: base_controller.hpp  base_controller_bak.hpp  px4_origin_controller.hpp
control/sunray_uav_control_refactor/include/mavros_helper/: mavros_helper.hpp
control/sunray_uav_control_refactor/launch/: vision_pose.launch
control/sunray_uav_control_refactor/src/: vision_pose.cpp  vision_pose_node.cpp
control/sunray_uav_control_refactor/test/: base_controller_compile_test.cpp
localization/localization_fusion/: CMakeLists.txt  package.xml
localization/localization_fusion/config/: localization_sources.yaml
localization/localization_fusion/include/: localization_fusion.hpp  localization_fusion_types.hpp  localization_fusion_utils.hpp
localization/localization_fusion/launch/: localization_fusion.launch  send_vision_pose.launch
localization/localization_fusion/scripts/: run_localization_fusion_mocap_tmux.sh  run_localization_fusion_only_tmux.sh
localization/localization_fusion/src/: localization_fusion.cpp  localization_fusion_node.cpp  localization_fusion_utils.cpp  utils.cpp
localization/localization_fusion/test/: send_vision_pose.cpp
test/px4_param_tui/: CMakeLists.txt  README_metadata.md  package.xml
test/px4_param_tui/launch/: px4_param_meta_server.launch  px4_param_tui_meta.launch
test/px4_param_tui/metadata/: README.md
test/px4_param_tui/scripts/: px4_param_meta_server.py
test/px4_param_tui/src/: px4_param_tui_meta_node.cpp  px4_param_tui_node.cpp
(+36 files in other folders)
