<?xml version="1.0"?>
<package format="2">
  <name>px4_web_api_demo</name>
  <version>0.0.1</version>
  <description>Minimal web API demo for PX4 parameter get/set via MAVROS services.</description>

  <maintainer email="taolin@todo.todo">taolin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export />
</package>

