<?xml version="1.0"?>
<package format="2">
  <name>px4_web_ui_demo</name>
  <version>0.0.1</version>
  <description>Simple HTML dashboard demo for PX4 web API usage.</description>

  <maintainer email="taolin@todo.todo">taolin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export />
</package>

