<?xml version="1.0"?>
<package format="2">
  <name>sunray_common</name>
  <version>0.1.0</version>
  <description>Common helper utilities shared across Sunray ROS packages.</description>

  <maintainer email="taolin@todo.todo">taolin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
