<?xml version="1.0"?>
<package format="2">
  <name>sunray_uav_control</name>
  <version>0.1.0</version>
  <description>Refactored high-level UAV control package for Sunray.</description>

  <maintainer email="taolin@todo.todo">taolin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sunray_msgs</depend>

  <export/>
</package>
