<?xml version="1.0"?>
<package format="2">
  <name>localization_fusion</name>
  <version>0.1.0</version>
  <description>Localization fusion package for Sunray UAV.</description>

  <maintainer email="maintainer@example.com">Sunray</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sunray_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>

  <export>
  </export>
</package>
